--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,6 +4,7 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+/* CLASSES */
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
@@ -25,22 +26,18 @@ main {
 .inline {
   display: inline-block;
 }
+
+/* HEADER */
 #background {
   width: 100%;
   height: 300px;
   background: linear-gradient(to bottom, #567D9F, #386286, #1c5380);
   position: absolute;
 }
-#phones {
-  top: 100px;
-}
 #header {
   width: 57%;
   left: 43%;
   top: 124px;
-}
-#logo {
-  width: 100%;
 }
 #login-button {
   background: linear-gradient(to bottom, rgb(112, 149, 180), #486c8b, #486c8b);
@@ -56,6 +53,13 @@ main {
   padding-bottom: 2px;
   vertical-align: text-bottom;
 }
+
+/* PHONES */
+#phones {
+  top: 100px;
+}
+
+/* TEXT */
 #description {
   left: 360px;
   top: 220px;
@@ -81,24 +85,25 @@ main {
   padding-top: 20px;
   padding-right: 15px;
 }
+
+/* FOOTER */
 #footer {
   top: 260px;
   left: 0;
   right: 0;
   text-align: center;
 }
-#footer-links a {
-  padding: 0 8px;
-  color: #1c5380;
+#footer-links a, #copyright {
   text-decoration: none;
   font-weight: 600;
   text-transform: uppercase;
   font-size: 0.7em;
 }
+#footer-links a {
+  padding: 0 8px;
+  color: #1c5380;
+}
 #copyright {
   padding-left: 20px;
-  font-weight: 600;
-  text-transform: uppercase;
-  font-size: 0.7em;
   color: #AAA;
 }
