No consigo colocarl el texto

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,59 +4,62 @@ dark blue: #06365f
 light blue: #1c5380*/
 
 
-
-
-
 header{
   background: url("../images/bgtile.png"); background-repeat: x;
   height: 450px;
 }
-
-/*.centerbox{
+.centerbox{
   width: 900px;
-  margin-top: -250px;
-  background: red;
+  margin-top: -220px;
   margin-left: auto;
-  margin-right: auto;*/
-
-.phones{
-  display: inline-block;
-  width: 14%;
-  margin-left: 15%;
-  margin-top: -200px;
-}
-
-/* .phones img {
-  width: 100%;
-  object-fit: cover;
-} */
-
-.instagram{
-  display: inline-block;
-  width: 45%;
-  margin-left: 180px;
-  margin-top: -260px;
-  background: yellow;
-    
+  /*ackground: yellowgreen;*/
+  margin-right: auto;
 }
 .caja{
   background: url("../images/frame.png");
   background-repeat: no-repeat;
-  height: 120px;
-  background: lightcoral;
   text-align: left;
-  margin-bottom: 50px;
+  margin-bottom: -150px;
+  width: 600px;
+  height: 600px;
+  margin-top: -80px;
+}
+.phones{
+  display: inline-block;
+  width: 20%;
+  margin-left: 40px;
+  margin-top: -10px;
+}
+
+/*.phones img {
+  width: 100%;
+  object-fit: cover;
+}*/ 
+
+/*.logo{
+  display: inline-block;
+  width: 20%;
+  margin-left: 50px;
+  margin-top: 10px;
+}*/
+
+.instagram{
+  display: inline-block;
+  width: 30%;
+  margin-left: 350px;
+  margin-top: -500px;
 }
 
 .boton{
   display: inline-block;
-  width: 30%;
-  height: 30px;
-  margin-left: 100%;
-  margin-top: -60px;
+  width: 100px;
+  height: 40px;
+  margin-left: 700%;
+  margin-top: -500px;
   background-color:#1c5380;
   color: white;
-  
+  box-shadow: white;
+  border-block-color: white;
 }
 
 body {
@@ -70,8 +73,8 @@ h1{
   font-size: 30px;
   text-align: left;
   margin-left: 40px;
-  margin-top: 90px;
-
+  margin-top: 100px;
+  margin-bottom: 10px;
 }
 p{
   font-family: sans-serif ; 
@@ -80,40 +83,55 @@ p{
   position: center;
   text-justify: auto;
   margin-left: 30px;
+  justify-items: center;
+  text-align: left;
 }
+
 .text{
   font-family: sans-serif;
   text-align: left;
   color: black;
-  font-size: 20px;
+  font-size: 15px;
   margin-left: 40px;
+  text-align: justify;
 }
 
 .text1{
   font-family: sans-serif;
   text-align: left;
+  position: relative;
   color: black;
-  position: center;
-  text-justify: center;
-  margin-left: 30px;
+  position: left;
+  margin-left: 40px;
+  font-size: 15px;
+  text-align: justify;
 }
 .text2{
   font-family: sans-serif;
   text-align: left;
   color: black;
   position: center;
-  text-justify: center;
-  margin-left: 30px;
-
+  margin-left: 40px;
+  font-size: 15px;
+  text-align: justify;
 }
-
+.logos{
+  display: inline-block;
+  margin-left: 50px;
+  word-spacing: 20px;
+  margin-bottom: 150px;
+  margin-top: 80px;
+}
 footer{
   text-transform: uppercase;
   text-align: center;
+  margin-left: 200px;
+  margin-right: -900px;
+  display: inline-block;
   font-size: 12px;
   color: #19619c;
-  word-spacing: 2px;
-  margin-top: 50px;
+  word-spacing: 9px;
+  /*margin-top: 5px;*/
 }
 .colorcopy{
   color: grey;
