--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -61,28 +61,27 @@ body {
   text-decoration: none;
   padding: 10px;
   border-radius: 5px;
-  border: solid 1px 06365f;
-  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#1c5380+0,1c5380+63,06365f+100 */
+  border: solid 1px #06365f;
   background: #1c5380; /* Old browsers */
   background: -moz-linear-gradient(
     top,
-    #1c5380 0%,
+    #4774a2 0%,
     #1c5380 63%,
     #06365f 100%
   ); /* FF3.6-15 */
   background: -webkit-linear-gradient(
     top,
-    #1c5380 0%,
+    #4774a2 0%,
     #1c5380 63%,
     #06365f 100%
   ); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(
     to bottom,
-    #1c5380 0%,
+    #4774a2 0%,
     #1c5380 63%,
     #06365f 100%
   ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1c5380', endColorstr='#06365f',GradientType=0 ); /* IE6-9 */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4774a2', endColorstr='#06365f',GradientType=0 ); /* IE6-9 */
   -webkit-box-shadow: 0 2px 3px 3px rgba(6, 54, 95, 0.1);
   box-shadow: 0 2px 3px 3px rgba(6, 54, 95, 0.1);
 }
