Add css to the ios android logos

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -61,6 +61,18 @@ a {
   margin-bottom: 30px;
 }
 
+.img_google_ios {
+  margin-top: 30px;
+}
+
+.android_logo {
+  margin-right: 10px;
+}
+
+.ios_logo {
+  margin-left: 10px;
+}
+
 #footer {
 }
 
