--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,125 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+/* ------------ GENERAL ---------------- */
+
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding-top: 90px;
+  background-color:#f4f5f7;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #101010;
+}
+
+h1 {
+  margin-bottom: 20px;
+  color: #042c54;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 29px;
+}
+
+p {
+  margin-bottom: 15px;
+}
+
+b{
+  font-weight: 600;
+}
+
+/* ------------ LAYOUT ---------------- */
+
+.col {
+  float: left;
+}
+
+.col.col40 {
+  width: 40%;
+}
+
+.col.col60 {
+  width: 60%;
+}
+
+/* ------------ HEADER ---------------- */
+header {
+  position: relative;
+}
+
+/* ------------ BUTTON ---------------- */
+
+button {
+  position: absolute;
+  height: fit-content;
+  margin: auto;
+  padding: 10px;
+  top: 50%;
+  bottom: 50%;
+  right: 1%;
+  background-image: linear-gradient(to bottom, #6E92B0, #33648b);
+  border: 1px solid #4A7396;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 600;
+  vertical-align: middle;
+}
+
+
+
+/* ------------ CONTENT ---------------- */
+
+main {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+div.content {
+  padding: 2.5rem;
+  background-image: url(../images/frame.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.clearfix {
+  clear: both;
+}
+
+/* ---------- STORE LINKS ------------- */
+.store-links a {
+  margin-right: 20px;
+}
+
+.store-links img{
+  margin-top: 20px;
+}
+
+/* ------------ FOOTER ---------------- */
+footer {
+  font-size: 12px;
+  font-weight: 600;
+  text-align: center;
+  text-transform: uppercase;
+  max-width: 900px;
+  margin: 20px auto;
+}
+
+/* -------------- NAV ---------------- */
+
+footer nav li {
+  display: inline;
+  margin: 10px;
+}
+
+footer nav a {
+  color: #506a80;
+  text-decoration: none;
+}
+
+/* -------------- COPYRIGHT ---------------- */
+footer p.copyright {
+  display: inline-block;
+  color: #b1b1b2;
 }
